potentially found the issue with the alignment of everything, gonna see if this fixes it

--- a/lab/stylesLab.css
+++ b/lab/stylesLab.css
@@ -19,6 +19,6 @@ nav {
     border: 512px;
 }
 
-* {
+/* * {
     box-sizing: border-box;   
-}
+} */
